[module]: add py tf2 static demo

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-tmp.txt
-install/*
-build/*
 log/*
-.vscode/c_cpp_properties.json
-.vscode/settings.json
-.README.md.swp
+build/*
+install/*
+.vscode/*
+*.pyc
